--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -45,7 +45,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://tsbsankara.netlify.app">Thomas Sankara</a>.
+      >. Coded by <a href="https://tsbsankara.netlify.app">Jeremias Riquero</a>.
     </div>
   </body>
 </html>
